# tictacs

./: .gitignore  .travis.yml  CMakeLists.txt  Component.hpp  Entity.cpp  Entity.hpp  LICENSE  README.md  ShaderComponent.cpp  ShaderComponent.hpp  ShapeComponent.cpp  ShapeComponent.hpp  SpriteComponent.cpp  SpriteComponent.hpp  config.h.in  main.cpp
cmake_modules/: FindSFML.cmake
test/: Entity.cc
